# ComParE2023

./: .envrc  .gitignore  .gitmodules  README.md  devenv.nix  devenv.yaml  dvc.yaml  params.yaml  pyproject.toml
src/: late_fusion.py
src/features/: deepspectrum.py  opensmile.py  wav2vec.py  xbow.py
src/features/audeep/: autoencoder.py  export.py  fusion.py  representations.py  spectrograms.py
src/ml/: ci.py  metrics.py  svm.py  wav2vec.py
src/preprocessing/: wav.py
src/visualisations/: cm.py
