[tool.poetry]
name = "ComParE2023-HP-C"
version = "0.1.0"
description = "Environment for ComParE2023 challenge baselines."
authors = ["alice@hume.ai"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
torch = { version = "^1.13"}
transformers = "^4.21.1"
torchaudio = { version = "^0.13" }
torchvision = { version = "^0.14" }
scikit-learn = "^1.1.1"
pandas = "^1.4.3"
seaborn = "^0.11.2"
dvc = "^2.38.1"
rich = "^12.6.0"
llvmlite = "^0.39.1"
numba = "^0.56.4"
librosa = "^0.9.2"
datasets = "^2.8.0"
evaluate = "^0.4.0"
pycm = "^3.7"
audmetric = "^1.1.6"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
